more menu bar centering and spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,11 @@
 :root {
   --lightgrey: #b0b0b0;
   --hotpink: #de1867;
+  --pink2: #be2274;
+  --mauve: #962b77;
+  --purple1: #6e2e70;
+  --purple2: #482c62;
+  --indigo: #28264d;
   --darkblue: #171e25;
   --charcoal: #00070e;
 }
@@ -55,8 +60,8 @@ body {
 }
 
 .menu-bar-container {
-  width: 75vw;
-  max-width: 1200px;
+  width: 65vw;
+  max-width: 1100px;
 }
 
 .menu-links {
@@ -67,7 +72,7 @@ body {
 }
 
 .nav-link {
-  margin-right: 45px;
+  margin-right: 25px;
 }
 
 .nav-link h3 {
@@ -80,6 +85,10 @@ body {
 
 .nav-link:active h3 {
   color: var(--lightgrey);
+}
+
+.nav-button {
+  margin-right: 45px; 
 }
 
  /* HOME PAGE */
